Fix footer spacing

--- a/frontend/public/stylesheets/event_create.css
+++ b/frontend/public/stylesheets/event_create.css
@@ -18,7 +18,7 @@
   background-attachment: fixed;
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 280px);
+  min-height: calc(100vh - 180px);
 }
 
 .background-test-form-filter {
